--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-}
+    // FOR FIREBASE
+    compile 'com.google.firebase:firebase-core:11.0.2'
+    compile 'com.google.firebase:firebase-auth:11.0.2'
+    testCompile 'junit:junit:4.12'}
+
+// FOR FIREBASE
+apply plugin: 'com.google.gms.google-services'
