--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
     }
+
 }
 
 dependencies {
@@ -38,7 +39,10 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.0.2'
     compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.firebase:firebase-client-android:2.4.0'
+    compile 'org.apache.commons:commons-collections4:4.1'
     testCompile 'junit:junit:4.12'
+
+
 }
 
 // FOR FIREBASE
