search activity fetches from database and populates text view in a search activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
 
         <activity android:name=".ViewStoryActivity" />
         <activity android:name=".AuthorActivity"></activity>
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
