back button now goes back to map activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
 
         <activity android:name=".ViewStoryActivity" />
         <activity android:name=".AuthorActivity"></activity>
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".SearchActivity"
+         android:parentActivityName="org.dreamitcodeit.storyteller.SearchActivity" ></activity>
     </application>
 
 </manifest>
