collapses search view after pressing back button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,8 +50,8 @@
 
         <activity android:name=".ViewStoryActivity" />
         <activity android:name=".AuthorActivity"></activity>
-        <activity android:name=".SearchActivity"
-         android:parentActivityName="org.dreamitcodeit.storyteller.SearchActivity" ></activity>
+        <activity android:name=".SearchActivity"></activity>
+         <!--android:parentActivityName="org.dreamitcodeit.storyteller.SearchActivity" ></activity>-->
     </application>
 
 </manifest>
