--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,14 +43,13 @@ dependencies {
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
 
-
     //for RecyclerView
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
-
 
     // FOR FIREBASE
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    //compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services-maps:11.0.2'
@@ -63,13 +62,15 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.0.2'
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'com.firebaseui:firebase-ui-storage:0.6.0'
-    testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
-    //compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.17.0'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
-    // compile 'com.firebaseui:firebase-ui:2.1.0'
+
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
