--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.hardware.camera" />
-
     <uses-feature
         android:name="android.hardware.camera.any"
         android:required="true" />
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
-
-
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -64,11 +59,17 @@
             android:value="@integer/google_play_services_version" />
 
         <activity android:name=".ViewStoryActivity" />
-        <activity android:name=".AuthorActivity"/>
-        <activity android:name=".ProfileActivity"/>
-        <activity android:name=".SearchActivity"
-            android:parentActivityName="org.dreamitcodeit.storyteller.SearchActivity" />
+        <activity android:name=".AuthorActivity" />
+        <activity android:name=".ProfileActivity" />
+        <activity
+            android:name=".SearchActivity"
+            android:parentActivityName=".SearchActivity" />
 
+        <activity android:name=".FacebookLoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter> </activity>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
     </application>
 
 </manifest>
