--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
+    compile 'com.android.support:design:25.3.1'
 
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
