--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.facebook.android:facebook-android-sdk:4.17.0'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 
