camera images are now saved into local storage. Not yet being recieved correctly from the intent. I also need to convert the uri that will be eventually returned to a bitmap so we can compress it and plop it into firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,18 @@
         <activity android:name=".AllStoriesActivity" />
         <activity android:name=".fragments.SearchLocationFragment"></activity>
         <activity android:name=".ViewImageActivity"></activity>
+
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="org.dreamitcodeit.storyteller.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
+        </provider>
+
     </application>
 
 </manifest>
