--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature
@@ -33,7 +33,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -61,8 +61,9 @@
             android:value="@integer/google_play_services_version" />
 
         <activity android:name=".ViewStoryActivity" />
-        <activity android:name=".AuthorActivity"
-            android:windowSoftInputMode="stateVisible|adjustNothing"/>
+        <activity
+            android:name=".AuthorActivity"
+            android:windowSoftInputMode="stateVisible|adjustNothing" />
         <activity android:name=".ProfileActivity" />
         <activity
             android:name=".SearchActivity"
@@ -78,9 +79,8 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".AllStoriesActivity" />
-        <activity android:name=".fragments.SearchLocationFragment"></activity>
-        <activity android:name=".ViewImageActivity"></activity>
-
+        <activity android:name=".fragments.SearchLocationFragment" />
+        <activity android:name=".ViewImageActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -89,9 +89,10 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
 
+        <activity android:name=".fragments.NoResultsActivity"></activity>
     </application>
 
 </manifest>
